--- a/wiki/rapport.wiki
+++ b/wiki/rapport.wiki
@@ -1,61 +1,11 @@
-#summary One-sentence summary of this page.
+#summary Le rapport de groupe
 
-= Introduction =
-
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
-
-
-
-
-
-
-
-
-
-
-
-
-Introduction à la recherche
-
-
-Validation de systèmes P2P
-
-
-
-ATLAS-GDD
-(Gestion de Données Distribuées)
-
-
-
-Année 2008 - 2009
-
-
-
-Table des matières
-
-
-
-
-Presentation du laboratoire
-	
-Présentation du sujet
-	
-	Problématique de la vérification de systèmes distribués
-Validation de systèmes P2P
-
-Ocean Store
-
-Kademlia
-
-Vuze
-PeerUnit
-
-planx
+Idées en vrac :
+  * Présentation de l'équipe
+  * Présentation du sujet
+  * Problématique de la vérification de systèmes distribués (tests unitaires inutiles)
+  * Kademlia
+    * différences avec les autres DHT
+    * Usage (Ocean Store/Vuze)
+  * PeerUnit
+  * planx
