--- a/wiki/rapport.wiki
+++ b/wiki/rapport.wiki
@@ -1,12 +1,12 @@
 *#summary Le rapport de groupe
 
-=Partie 1
+=Partie 1=
 Idées en vrac :
   * Présentation du laboratoire (si ce rapport est diffusé un minimum)
     * importance du labo (nb chercheurs, liens avec d'autres labo, cnrs..)
     * principaux axes de recherche.. (tout ça en concis)
   * Présentation de l'équipe
-=Partie 2
+=Partie 2=
   * Présentation du sujet
   * Problématique de la vérification de systèmes distribués (tests unitaires inutiles)
     * Limitation des tests unitaires
@@ -25,5 +25,8 @@ Idées en vrac :
     * Objectifs
     * Description du Fonctionnement ?
   * planx
+=Partie 3 et plus=
+  * Test effectués...
+  * Problèmes rencontrés
 
 *Ne pas hésiter à compléter/détailler (cliquez sur Edit this page ↑↑↑) *
