Désolé, je n'ai pas vu ça. Ajout et modification (mise en forme).

--- a/wiki/rapport.wiki
+++ b/wiki/rapport.wiki
@@ -1,12 +1,13 @@
 *#summary Le rapport de groupe
 
-=Partie 1=
-Idées en vrac :
+(autres) Idées en vrac :
+
+==Partie 1==
   * Présentation du laboratoire (si ce rapport est diffusé un minimum)
     * importance du labo (nb chercheurs, liens avec d'autres labo, cnrs..)
     * principaux axes de recherche.. (tout ça en concis)
   * Présentation de l'équipe
-=Partie 2=
+==Partie 2==
   * Présentation du sujet
   * Problématique de la vérification de systèmes distribués (tests unitaires inutiles)
     * Limitation des tests unitaires
@@ -25,7 +26,7 @@ Idées en vrac :
     * Objectifs
     * Description du Fonctionnement ?
   * planx
-=Partie 3 et plus=
+==Partie 3 et plus==
   * Test effectués...
   * Problèmes rencontrés
 
