--- a/wiki/rapport.wiki
+++ b/wiki/rapport.wiki
@@ -15,7 +15,7 @@
   * Kademlia
     * différences avec les autres DHT
     * Usage (Ocean Store/Vuze/eMule?->plus connu)
-      * [semble être utilisé principalement pour la localisation de donnée et non leur transfert.. (J'ai loupé quelque chose ?)]
+      * ~~semble être utilisé principalement pour la localisation de donnée et non leur transfert.. (J'ai loupé quelque chose ?) → ouais, c'est le cas de toutes les DHT~~ 
     * description du protocole/fonctionnement
       * ID sur 160 bits,
       * connexion au réseau,
