--- a/wiki/rapport.wiki
+++ b/wiki/rapport.wiki
@@ -129,6 +129,26 @@ Décrire brièvement mais formellement le protocole (~ 1 page)
 
 == PeerUnit ==
 
+La problématique du test logiciel est un des aspects centraux de la qualité logicielle, si bien qu'un module entier (optionnel) de notre formation y est consacré.
+
+Pour le test d'applications typiques, on utilise le framework XUnit : il s'agit d'un outil permettant d'écrire et de valider automatiquement des tests « unitaires » : c'est à dire que chaque test porte sur une unité du code, dans les langages objets, l'unité est la classe. Pour chaque classe, on écrit une classe de test. En Java, Junit fait partie des framework de type XUnit.
+
+Toutefois, dans une application répartie, plusieurs problèmes peuvent se poser lorsqu'on fait des tests unitaires. 
+
+PHRASE MANQUANTE
+
+L'application distribuée se retrouve donc avec tous ses éléments censés être répartis en local. Les tests vont donc être menés comme si l'application étant centralisée.
+
+Ainsi, on ne peut pas vérifier si
+  * Le système passe bien à l'échelle. Si on suppose que la machine qui fait les tests ne peut supporter que 10 pairs : comment vérifier ce qu'il se passe lorsqu'on a 10 000 pairs ou plus. Ne pas pouvoir faire cette vérification est un problème majeur : si on a cherché à répartir l'application, c'est justement parce que l'application ne peut être supportée par une seule machine.
+  * Le système est robuste aux problèmes de transmission (si tous les pairs sont en local, aucun risque de problème, alors que sur un réseau vaste comme Internet les problèmes sont fréquents)
+  * Le système fonctionne sur une topologie de réseau complexe
+
+On voit donc que les tests unitaires ne permettent pas de tester une application pair à pair en examinant son comportement réel. C'est pourquoi l'outil PeerUnit a été créé.
+
+Dans PeerUnit, chaque test peut porter sur plusieurs pairs répartis sur différentes machines et connectés à travers le réseau. Une des principales problématiques pour tester une application répartie est le parallélisme. Même si chaque pair a fait son travail dans le bon ordre, le résultat n'est pas le même. Dans PeerUnit, les pairs sont synchronisés par un coordinateur. C'est un programme indépendant connecté à tous les pairs et qui permet éventuellement de partager des informations entre pairs afin que les tests puissent se dérouler.
+
+
 
 
 = Partie 3 et plus =
